[package]
name = "sync_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
env_logger = "0.10.0"
ftp = "3.0.1"
inquire = "0.6.2"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
toml = "0.7.6"
